[metadata]
name = bigtwo
version = 1.0.1
author = Mike Cheng
description = This is an example project
long_description = This is a longer description for the project
url = https://youtube.com
keywords = sample, example, setuptools

[options]
python_requires = >=3.7, <4
install_requires = 
    pandas
packages =
    bigtwo